--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 bg-light bg-opacity-75 rounded-3 text-center">
                     <div class="m-4 m-lg-5">
-                        <h1 class="display-6 fw-bold">MIT Robotics & Climate Workshop 2024</h1>
+                        <img src="assets/rcw_logo.png" width=300 class="d-inline-block align-text-middle" alt="">
+                        <h1 class="display-6 fw-bold">MIT Robotics & Climate Workshop 2024 </h1>
                         <p class="fs-5">The MIT Robotics & Climate Workshop (RCW) will be convening researchers from the robotics, climate, and sustainability communities for a day of presentations, panels, and discussions about how robotics research can support climate change science, mitigation, and adaptation efforts. </p>
                         <a class="btn btn-primary btn-lg" href="#!">Sign Up Form Coming Soon</a>
                     </div>
@@ -83,6 +84,18 @@
                             <p class="card-text">MIT-WHOI Joint Program in Oceanography</p>
                             <a href="mailto: syiwang@mit.edu" class="card-link">Email</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sponsors -->
+        <section class="pt-4">
+            <div class="container px-lg-5">
+            <h2> Sponsors </h2>
+                <div class="card-group">
+                    <div class="card border-0" style="width: 18rem;">
+                        <img width="50%" src="assets/2021-MIT-CEE-Visual-Identity_color.png" alt="MIT CEE">
                     </div>
                 </div>
             </div>
