add new sponsors

--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
             <h2> Sponsors </h2>
                 <div class="card-group">
                     <div class="card border-0" style="width: 18rem;">
-                        <img width="50%" src="assets/2021-MIT-CEE-Visual-Identity_color.png" alt="MIT CEE">
+                        <img class="mx-auto my-auto" width="100%" src="assets/mit_aeroastro_logo.png" alt="MIT AeroAstro">
+                    </div>
+                    <div class="card border-0" style="width: 18rem;">
+                        <img class="mx-auto my-auto" width="100%" src="assets/2021-MIT-CEE-Visual-Identity_color.png" alt="MIT CEE">
+                    </div>
+                    <div class="card border-0" style="width: 18rem;">
+                        <img class="mx-auto my-auto" width="100%" src="assets/mit_office_of_sus.svg" alt="MIT Office of Sustainability">
                     </div>
                 </div>
             </div>
