add schedule and speaker section

--- a/index.html
+++ b/index.html
@@ -37,18 +37,112 @@
                 <div class="p-4 p-lg-5 bg-light bg-opacity-75 rounded-3 text-center">
                     <div class="m-4 m-lg-5">
                         <img src="assets/rcw_logo.png" width=300 class="d-inline-block align-text-middle" alt="">
-                        <h1 class="display-6 fw-bold">MIT Robotics & Climate Workshop 2024 </h1>
-                        <p class="fs-5">The MIT Robotics & Climate Workshop (RCW) will be convening researchers from the robotics, climate, and sustainability communities for a day of presentations, panels, and discussions about how robotics research can support climate change science, mitigation, and adaptation efforts. </p>
+                        <h1 class="display-4 fw-bold">MIT Robotics & Climate Workshop</h1>
+                        <h1 class="display-6 fw-bold">May 7th, 2024 </h1>
+                        <p class="fs-5">On May 7th, 2024, the MIT Robotics & Climate Workshop (RCW) will be convening researchers from the robotics, climate, and sustainability communities for a day of presentations, panels, and discussions about how robotics research can support climate change science, mitigation, and adaptation efforts. </p>
                         <a class="btn btn-primary btn-lg" href="#!">Sign Up Form Coming Soon</a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- Organizers -->
+        <!-- Speakers-->
         <section class="pt-4">
             <div class="container px-lg-5">
-            <h2> Timetable </h2>
+            <h2> Keynote Speakers </h2>
             To be announced.
+            </div>
+        </section>
+
+        <!-- Schedule -->
+        <section class="pt-4">
+            <div class="container px-lg-5">
+            <div class="col-6">
+            <h2> Schedule </h2>
+                 <table class="table table-striped">
+                 <thead class="thead-light">
+                   <tr>
+                     <th>Time </th>
+                     <th>Activity</th>
+                   </tr>
+                 </thead>
+                 <tbody>
+                   <tr>
+                     <th>8:30 AM</th>
+                     <th>Check In</th>
+                   </tr>
+                   <tr>
+                     <td>9:00 AM</td>
+                     <td rowspan="2">Keynote I</td>
+                   </tr>
+                   <tr>
+                     <td>9:30 AM</td>
+                   </tr>
+                   <tr>
+                     <td>10:00 AM</td>
+                     <td>Break</td>
+                   </tr>
+                   <tr>
+                     <td>10:10 AM</td>
+                     <td>Panel I</td>
+                   </tr>
+                   <tr>
+                     <td>10:50 AM</td>
+                     <td>Break</td>
+                   </tr>
+                   <tr>
+                     <td>11:00 AM</td>
+                     <td rowspan="2">Keynote II</td>
+                   </tr>
+                   <tr>
+                     <td>11:30 AM</td>
+                   </tr>
+                   <tr>
+                     <td>12:00 PM</td>
+                     <td rowspan="2">Lunch</td>
+                   </tr>
+                   <tr>
+                     <td>12:30 PM</td>
+                   </tr>
+                   <tr>
+                     <td>1:00 PM</td>
+                     <td>Panel II</td>
+                   </tr>
+                   <tr>
+                     <td>1:40 PM</td>
+                     <td>Break</td>
+                   </tr>
+                   <tr>
+                     <td>2:00 PM</td>
+                     <td rowspan="2">Whitepaper Session 1</td>
+                   </tr>
+                   <tr>
+                     <td>2:30 PM</td>
+                   </tr>
+                   <tr>
+                     <td>3:00 PM</td>
+                     <td>Break</td>
+                   </tr>
+                   <tr>
+                     <td>3:30 PM</td>
+                     <td rowspan="3">Whitepaper Session 2</td>
+                   </tr>
+                   <tr>
+                     <td>4:00 PM</td>
+                   </tr>
+                   <tr>
+                     <td>4:30 PM</td>
+                   </tr>
+                   <tr>
+                     <td>5:00 PM</td>
+                     <td>Closing Remarks</td>
+                   </tr>
+                   <tr>
+                     <td>5:30 PM</td>
+                     <td>Dinner</td>
+                   </tr>
+                 </tbody>
+                 </table>           
+            </div>
             </div>
         </section>
 
