update faculty advisors; update sign up form

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <h1 class="display-4 fw-bold">MIT Robotics & Climate Workshop</h1>
                         <h1 class="display-6 fw-bold">May 7th, 2024 </h1>
                         <p class="fs-5">On May 7th, 2024, the MIT Robotics & Climate Workshop (RCW) will be convening researchers from the robotics, climate, and sustainability communities for a day of presentations, panels, and discussions about how robotics research can support climate change science, mitigation, and adaptation efforts. </p>
-                        <a class="btn btn-primary btn-lg" href="#!">Sign Up Form Coming Soon</a>
+                        <a class="btn btn-primary btn-lg" href="https://forms.gle/gMdvMLBp4eXUzvUSA">Register Here!</a>
                     </div>
                 </div>
             </div>
@@ -113,32 +113,20 @@
                    </tr>
                    <tr>
                      <td>2:00 PM</td>
-                     <td rowspan="2">Whitepaper Session 1</td>
+                     <td rowspan="3">Whitepaper Session</td>
                    </tr>
                    <tr>
                      <td>2:30 PM</td>
                    </tr>
                    <tr>
                      <td>3:00 PM</td>
-                     <td>Break</td>
                    </tr>
                    <tr>
                      <td>3:30 PM</td>
-                     <td rowspan="3">Whitepaper Session 2</td>
+                     <td rowspan="2">Closing Remarks</td>
                    </tr>
                    <tr>
                      <td>4:00 PM</td>
-                   </tr>
-                   <tr>
-                     <td>4:30 PM</td>
-                   </tr>
-                   <tr>
-                     <td>5:00 PM</td>
-                     <td>Closing Remarks</td>
-                   </tr>
-                   <tr>
-                     <td>5:30 PM</td>
-                     <td>Dinner</td>
                    </tr>
                  </tbody>
                  </table>           
@@ -177,6 +165,30 @@
                             <h5 class="card-title">Shouyi Wang</h5>
                             <p class="card-text">MIT-WHOI Joint Program in Oceanography</p>
                             <a href="mailto: syiwang@mit.edu" class="card-link">Email</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Faculty Advisors -->
+        <section class="pt-4">
+            <div class="container px-lg-5">
+            <h2> Faculty Advisors</h2>
+                <div class="card-group">
+                    <div class="card border-0" style="width: 18rem;">
+                        <div class="card-body px-0 mx-0">
+                            <h5 class="card-title">Luca Carlone</h5>
+                            <p class="card-text">Boeing Career Development Associate Professor, MIT AeroAstro; PI in MIT LIDS</p>
+                            <a href="mailto: lcarlone@mit.edu" class="card-link">Email</a>
+                            <a href="https://lucacarlone.mit.edu/" class="card-link">Website</a>
+                        </div>
+                    </div>
+                    <div class="card border-0" style="width: 18rem;">
+                        <div class="card-body px-0 mx-0">
+                            <h5 class="card-title">John Leonard </h5>
+                            <p class="card-text">Samuel C. Collins Professor of Mechanical and Ocean Engineering, MIT MechE; PI in MIT CSAIL</p>
+                            <a href="mailto: jleonard@mit.edu" class="card-link">Email</a>
                         </div>
                     </div>
                 </div>
