--- a/index.html
+++ b/index.html
@@ -52,18 +52,20 @@
                 <div class="card-group">
                     <div class="card border-0" style="width: 18rem;">
                         <div class="card-body px-0 mx-0">
-                            <h5 class="card-title">Abigail Bodner</h5>
-                            <p class="card-text">Assistant Professor, MIT EAPS and EECS</p>
-                            <a href="mailto: abodner@mit.edu" class="card-link">Email</a>
-                            <a href="https://abodner.github.io/" class="card-link">Website</a>
+                            <h5 class="card-title">Christoph Reinhart</h5>
+                            <p class="card-text fw-light">Keynote I</p>
+                            <p class="card-text">Professor, MIT Architecture; Director, MIT Building Technology Program</p>
+                            <a href="mailto: tito_@mit.edu" class="card-link">Email</a>
+                            <a href="https://architecture.mit.edu/people/christoph-reinhart" class="card-link">Website</a>
                         </div>
                     </div>
                     <div class="card border-0" style="width: 18rem;">
                         <div class="card-body px-0 mx-0">
-                            <h5 class="card-title">Christoph Reinhart</h5>
-                            <p class="card-text">Professor, MIT Architecture; Director, MIT Building Technology Program</p>
-                            <a href="mailto: tito_@mit.edu" class="card-link">Email</a>
-                            <a href="https://architecture.mit.edu/people/christoph-reinhart" class="card-link">Website</a>
+                            <h5 class="card-title">Abigail Bodner</h5>
+                            <p class="card-text fw-light">Keynote II</p>
+                            <p class="card-text">Assistant Professor, MIT EAPS and EECS</p>
+                            <a href="mailto: abodner@mit.edu" class="card-link">Email</a>
+                            <a href="https://abodner.github.io/" class="card-link">Website</a>
                         </div>
                     </div>
                 </div>
