Add contact info for organizers

--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@
             </div>
             <div class="column"></div>
         </div>
+        <h5 class="text-muted text-center">
+            <a class="btn btn-secondary btn-sm" href="mailto:robotics-and-climate@mit.edu">Contact us</a>
+        </h5>
     </section>
 
     <!-- Faculty Advisors -->
