update alan's picture and add a little info to schedule

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                             </tr>
                             <tr>
                                 <td>9:00 AM</td>
-                                <td rowspan="2">Keynote I</td>
+                                <td rowspan="2">Keynote I: Prof. Christoph Reinhart</td>
                             </tr>
                             <tr>
                                 <td>9:30 AM</td>
@@ -292,7 +292,7 @@
                             </tr>
                             <tr>
                                 <td>10:10 AM</td>
-                                <td>Panel I</td>
+                                <td>Panel I: The Built Environment</td>
                             </tr>
                             <tr>
                                 <td>10:50 AM</td>
@@ -300,7 +300,7 @@
                             </tr>
                             <tr>
                                 <td>11:00 AM</td>
-                                <td rowspan="2">Keynote II</td>
+                                <td rowspan="2">Keynote II: Prof. Abigail Bodner</td>
                             </tr>
                             <tr>
                                 <td>11:30 AM</td>
@@ -314,7 +314,7 @@
                             </tr>
                             <tr>
                                 <td>1:00 PM</td>
-                                <td>Panel II</td>
+                                <td>Panel II: Climate Science</td>
                             </tr>
                             <tr>
                                 <td>1:40 PM</td>
@@ -349,7 +349,7 @@
     <section class="pt-4">
         <hr />
         <h2 class="text-center">Organizers</h2>
-        <h5 class="text-muted text-center">(alphabetized by last names)</h5>
+        <h5 class="text-muted text-center">(by last names)</h5>
         <hr />
         <div class="row">
             <div class="column"></div>
