--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/christoph_reinhart.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Christoph Reinhart">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://architecture.mit.edu/people/christoph-reinhart"
                                 class="text-decoration-none">
@@ -119,7 +119,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/abigail_bodner.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Abigail Bodner">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://abodner.github.io" class="text-decoration-none">
                                 Abigail Bodner
@@ -168,7 +168,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/norhan_bayomi.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Norhan Bayomi">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://environmentalsolutions.mit.edu/people/norhan-bayomi/"
                                 class="text-decoration-none">
@@ -182,7 +182,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/shide_salimi.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Shide Salimi">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://harvardcgbc.org/people/research-team/" class="text-decoration-none">
                                 Shide Salimi
@@ -194,7 +194,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/ramon_weber.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Ramon Weber">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="http://www.rewdesign.ch/" class="text-decoration-none">
                                 Ramon Weber
@@ -219,7 +219,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/lukas_taenzer.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Lukas Lobert Taenzer">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://directory.whoi.edu/profile/llobert/" class="text-decoration-none">
                                 Lukas Lobert Taenzer
@@ -231,7 +231,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/bianca_champenois.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Bianca Champenois">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://biancach.github.io/" class="text-decoration-none">
                                 Bianca Champenois
@@ -243,7 +243,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/alice_ren.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Alice Ren">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://www.whoi.edu/alice-ren/" class="text-decoration-none">
                                 Alice Ren
@@ -357,7 +357,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/charles_dawson.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Charles Dawson">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://www.linkedin.com/in/c6d5/" class="text-decoration-none">
                                 Charles Dawson
@@ -369,7 +369,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/alan_papalia.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Alan Papalia">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://alanpapalia.github.io/" class="text-decoration-none">
                                 Alan Papalia
@@ -381,7 +381,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/jignan_shi.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Jingnan Shi">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://jingnanshi.com/" class="text-decoration-none">
                                 Jingnan Shi
@@ -394,7 +394,7 @@
                 <div class="card border-0 w-50">
                     <img src="assets/people/shouyi_wang.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Shouyi Wang">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://syi-wang.github.io/" class="text-decoration-none">
                                 Shouyi Wang
@@ -423,7 +423,7 @@
                 <div class="card border-0 w-75">
                     <img src="assets/people/luca_carlone.png" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="Luca Carlone">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://lucacarlone.mit.edu/" class="text-decoration-none">
                                 Luca Carlone
@@ -436,7 +436,7 @@
                 <div class="card border-0 w-75">
                     <img src="assets/people/john_leonard.jpg" class="card-img-top rounded w-50 d-flex mx-auto"
                         alt="John Leonard">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">
                             <a href="https://meche.mit.edu/people/faculty/JLEONARD@MIT.EDU"
                                 class="text-decoration-none">
