--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                 Alan Papalia
                             </a>
                         </h5>
-                        <h7 class="card-subtitle text-muted">MIT-WHOI Joint (AOPE/MechE/CSAIL)</h7>
+                        <h7 class="card-subtitle text-muted">MIT-WHOI (AOPE/MechE/CSAIL)</h7>
                     </div>
                 </div>
                 <div class="card border-0 w-50">
