add some SEO and a location to the top of the website

--- a/index.html
+++ b/index.html
@@ -18,12 +18,35 @@
         .caret-rotate {
             transition: transform 0.3s ease-in-out;
         }
-
         .collapse.show .caret-rotate {
             transform: rotate(180deg);
         }
     </style>
+
+    <!-- Additional SEO Tags -->
+    <!-- Meta Keywords (Optional) -->
+    <meta name="keywords" content="MIT, Robotics, Climate, Workshop">
+
+    <!-- Canonical Tag (Optional) -->
+    <link rel="canonical" href="https://mit-rcw.github.io/2024-workshop/">
+
+    <!-- Twitter Card Tags (Optional) -->
+    <meta name="twitter:title" content="MIT Robotics Climate Workshop">
+    <meta name="twitter:description" content="MIT Robotics Climate Workshop aims to gather a local community of researchers to think
+        towards future robotics research that can support climate change science, mitigation, and adaptation.">
+    <meta name="twitter:image" content="assets/rcw_logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Open Graph (OG) Tags (Optional) -->
+    <meta property="og:title" content="MIT Robotics Climate Workshop">
+    <meta property="og:description" content="MIT Robotics Climate Workshop aims to gather a local community
+        of researchers to think towards future robotics research that can
+        support climate change science, mitigation, and adaptation.">
+    <meta property="og:image" content="assets/rcw_logo.png">
+    <meta property="og:url" content="https://mit-rcw.github.io/2024-workshop/">
+
 </head>
+
 
 <body>
     <!-- Responsive navbar-->
@@ -52,9 +75,11 @@
                 <div class="m-4 m-lg-5">
                     <img src="assets/rcw_logo.png" width=300 class="d-inline-block align-text-middle" alt="">
                     <h1 class="display-4 fw-bold">MIT Robotics & Climate Workshop</h1>
-                    <h1 class="display-6 fw-bold">May 7th, 2024 </h1>
-                    <p class="fs-5">On May 7th, 2024, the MIT Robotics & Climate Workshop (RCW) will be convening
-                        researchers from the robotics, climate, and sustainability communities for a day of
+                    <!-- <h1 class="display-6 fw-bold">May 7th, 2024 in the Patil/Kiva Seminar Room (32-G449)</h1> -->
+                    <h2 class="display-9 ">May 7th, 2024 (8am-4pm)</h2>
+                    <h2 class="display-9 ">MIT Patil/Kiva Seminar Room (32-G449)</h2>
+                    <p class="fs-5">The MIT Robotics & Climate Workshop will be convening local
+                        members from the robotics, climate, and sustainability communities for a day of
                         presentations, panels, and discussions about how robotics research can support climate change
                         science, mitigation, and adaptation efforts. </p>
                     <a class="btn btn-primary btn-lg" href="https://forms.gle/gMdvMLBp4eXUzvUSA">Register Here!</a>
