add comments above panels to label corresponding sections (no new functionality)

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </div>
         </div>
     </header>
+
     <!-- Speakers-->
     <section class="pt-4">
         <hr />
@@ -183,6 +184,7 @@
         </div>
     </section>
 
+    <!-- Built Environment Panel -->
     <section class="pt-4">
         <hr />
         <h2 class="text-center">Panel 1: The Built Environment</h2>
@@ -234,6 +236,7 @@
         </div>
     </section>
 
+    <!-- Climate Science Panel -->
     <section class="pt-4">
         <hr />
         <h2 class="text-center">Panel 2: Climate Science</h2>
@@ -347,8 +350,6 @@
             </div>
         </div>
     </section>
-
-
     <style>
         /* Color for table header */
         .table thead th {
