workshop structure and white paper details

--- a/index.html
+++ b/index.html
@@ -88,6 +88,61 @@
         </div>
     </header>
 
+    <!-- Section for Workshop Structure and White Paper Details -->
+    <section class="container pt-4">
+        <div class="card border-0">
+            <hr />
+            <h2 class="text-center">Workshop Structure</h2>
+            <hr />
+            <!-- paragraph but with larger font -->
+            <p class="fs-5">
+                The MIT Robotics & Climate Workshop will be a full-day event, with
+                three distinct sessions.
+                The day will begin with the theme of the
+                built environment, with a keynote address by Prof. Christoph
+                Reinhart and a subsequent panel discussion featuring Norhan Bayomi,
+                Shide Salimi, and Ramon Weber.
+                The second session will focus on
+                climate science, with a keynote address by Prof. Abigail Bodner and
+                a panel discussion featuring Lukas Lobert Taenzer, Bianca
+                Champenois, and Alice Ren.
+            </p>
+
+            <p class="fs-5">
+                The day will conclude with a whitepaper brainstorming section,
+                where participants will engage in teams to discuss future
+                climate-focused robotics research. The ideas generated during
+                this session will be used to inform the development of a
+                white paper which will be a longer-term output of the workshop.
+            </p>
+
+            <hr />
+            <h2 class="text-center">White Paper Details</h2>
+            <hr />
+            <p class="fs-5">
+                Involvement in the white paper brainstorming session is not a
+                requirement for participation in the workshop. Similarly, you
+                can (and should) participate in the white paper session even if
+                you do not desire to be involved in the future writing of the
+                paper.
+            </p>
+            <p class="fs-5">
+                We anticipate the white paper will be a collaborative effort,
+                which will take several months and will extend well beyond the
+                local community of workshop participants. The white paper will
+                attempt a comprehensive coverage of possible outlets for
+                climate-relevant robotics research.
+            </p>
+            <!-- <p class="fs-5">
+                In advance of the workshop we will clearly outline formal
+                authorship expectations on the final white paper. We anticipate
+                that authorship criteria will be based on contribution to the
+                research, writing, and editing of the paper after the workshop.
+            </p> -->
+        </div>
+    </section>
+
+
     <!-- Speakers-->
     <section class="pt-4">
         <hr />
