comment out all white paper details for now

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
 
             <hr />
-            <h2 class="text-center">White Paper Details</h2>
+            <!-- <h2 class="text-center">White Paper Details</h2>
             <hr />
             <p class="fs-5">
                 Involvement in the white paper brainstorming session is not a
@@ -132,7 +132,7 @@
                 local community of workshop participants. The white paper will
                 attempt a comprehensive coverage of possible outlets for
                 climate-relevant robotics research.
-            </p>
+            </p> -->
             <!-- <p class="fs-5">
                 In advance of the workshop we will clearly outline formal
                 authorship expectations on the final white paper. We anticipate
