comment out all workshop structure and white paper details

--- a/index.html
+++ b/index.html
@@ -88,13 +88,12 @@
         </div>
     </header>
 
-    <!-- Section for Workshop Structure and White Paper Details -->
-    <section class="container pt-4">
+    <!-- Section for Workshop Structure and White Paper -->
+    <!-- <section class="container pt-4">
         <div class="card border-0">
             <hr />
             <h2 class="text-center">Workshop Structure</h2>
             <hr />
-            <!-- paragraph but with larger font -->
             <p class="fs-5">
                 The MIT Robotics & Climate Workshop will be a full-day event, with
                 three distinct sessions.
@@ -116,8 +115,8 @@
                 white paper which will be a longer-term output of the workshop.
             </p>
 
-            <!-- <hr /> -->
-            <!-- <h2 class="text-center">White Paper Details</h2>
+            <hr />
+            <h2 class="text-center">White Paper Details</h2>
             <hr />
             <p class="fs-5">
                 Involvement in the white paper brainstorming session is not a
@@ -132,15 +131,15 @@
                 local community of workshop participants. The white paper will
                 attempt a comprehensive coverage of possible outlets for
                 climate-relevant robotics research.
-            </p> -->
-            <!-- <p class="fs-5">
+            </p>
+            <p class="fs-5">
                 In advance of the workshop we will clearly outline formal
                 authorship expectations on the final white paper. We anticipate
                 that authorship criteria will be based on contribution to the
                 research, writing, and editing of the paper after the workshop.
-            </p> -->
+            </p>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- Speakers-->
