whitepaper -> white paper in a few places

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             </p>
 
             <p class="fs-5">
-                The day will conclude with a whitepaper brainstorming section,
+                The day will conclude with a white paper brainstorming session,
                 where participants will engage in teams to discuss future
                 climate-focused robotics research. The ideas generated during
-                this session will be used to inform the development of a
-                white paper which will be a longer-term output of the workshop.
+                this session will inform the development of a white paper which
+                will be a longer-term output of the workshop.
             </p>
         </div>
     </section>
@@ -370,7 +370,7 @@
                             </tr>
                             <tr class="session-i">
                                 <td>2:00 PM - 3:30 PM</td>
-                                <td>Whitepaper Session</td>
+                                <td>White Paper Session</td>
                             </tr>
                             <tr class="session-ii">
                                 <td>3:30 PM - 4:00 PM</td>
