comment out any details on white paper and add Center for Ocean Engineering logo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#speakers">Speakers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#schedule">Schedule</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#white-paper">White Paper</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#white-paper">White Paper</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="#sponsors">Sponsors</a></li>
                 </ul>
             </div>
         </div>
@@ -407,7 +408,7 @@
     </style>
 
     <!-- Section for White Paper Details -->
-    <section class="pt-4" id="white-paper">
+    <!-- <section class="pt-4" id="white-paper">
         <hr />
         <h2 class="text-center">White Paper Details</h2>
         <hr />
@@ -433,7 +434,7 @@
                 research, writing, and editing of the paper after the workshop.
             </p>
         </div>
-    </section>
+    </section> -->
 
     <!-- Organizers -->
     <section class="pt-4">
@@ -542,9 +543,11 @@
     </section>
 
     <!-- Sponsors -->
-    <section class="pt-4">
+    <section class="pt-4" id="sponsors">
+        <hr />
+        <h2 class="text-center">Sponsors</h2>
+        <hr />
         <div class="container px-lg-5">
-            <h2> Sponsors </h2>
             <div class="card-group">
                 <div class="card border-0" style="width: 18rem;">
                     <img class="mx-auto my-auto" width="100%" src="assets/mit_aeroastro_logo.png" alt="MIT AeroAstro">
@@ -556,6 +559,10 @@
                 <div class="card border-0" style="width: 18rem;">
                     <img class="mx-auto my-auto" width="100%" src="assets/mit_office_of_sus.svg"
                         alt="MIT Office of Sustainability">
+                </div>
+                <div class="card border-0" style="width: 18rem;">
+                    <img class="mx-auto my-auto" width="100%" src="assets/mit_coe_logo.png"
+                        alt="MIT Center for Ocean Engineering">
                 </div>
             </div>
         </div>
